--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Jogo do Palpite</title>
 </head>
 <body>
+    <h1>Jogo do Palpite</h1>
+    <p id="mensagem"></p>
+    <button id="jogar-novamente" onclick="jogar()">Jogar</button>
     <script src="randompalpite.js"></script>
 </body>
 </html>
